--- a/visnov-sfml/visnov-sfml.vcxproj
+++ b/visnov-sfml/visnov-sfml.vcxproj
@@ -19,9 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{306E6300-BFB4-4405-B3F8-FD146415228B}</ProjectGuid>
-    <RootNamespace>VisNov</RootNamespace>
+    <ProjectGuid>{A56C32DF-0E68-48C8-8730-752233BD1895}</ProjectGuid>
+    <RootNamespace>visnov-sfml</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>visnov-sfml</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
