--- a/visnov-sfml/visnov-sfml.vcxproj.filters
+++ b/visnov-sfml/visnov-sfml.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Background.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Actor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dialogue.hpp">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Background.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Actor.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
